# python3-cisctl

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  README.md  action.yml  apt.txt  entrypoint.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: actions.yml  publish.yml
cisctl/: __init__.py  bash.py  client.py  config.py  constants.py  exception.py  http.py  logger.py  render.py  shell.py  skopeo.py  utils.py  version.py
cisctl/api/: __init__.py  docker.py  gcr.py  k8s.py  quay.py
cisctl/template/: README.md
cisctl/tests/unit/: test_http.py  test_shell.py  test_skopeo.py  test_utils.py
cisctl/tests/unit/api/: __init__.py  test_docker.py  test_gcr.py  test_k8s.py
cisctl/tests/unit/v1/: test_sync.py
cisctl/v1/: __init__.py  render.py  shell.py  sync.py
script/: delete_image.sh
