[metadata]
name = python3-cisctl
summary = Container Images Sync Client
description_file =
    README.md
author = xiexianbin
author_email = me@xiexianbin.cn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.xiexianbin.cn/
project_urls =
    Bug Tracker = https://github.com/x-actions/python3-cisctl/issues
    Source Code = https://github.com/x-actions/python3-cisctl
python-requires = >=3.6
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    cisctl
data_files =

[entry_points]
console_scripts =
    cisctl = cisctl.shell:main

[extras]
skopeo =
    skopeo>=1.3.0
